styles.css
/* * {
    background-color: black;
} */
body {
    background-color: black;
}

#header {
    color: white;
    font-family:"Space Mono";
    font-size:medium;
    font-weight: 100;
    transform: scale(1, 1.05);

    /* position text in the middle of the website */
    position: fixed;
    top: 38%;
    left: 50%;
    transition: left 1s ease-out 100ms;
    z-index: 2;
}

.about, .work{
    color: white;
    /* font-family:"Space Mono"; */
    font-size: medium;
    font-weight: 100;
    transform: scale(1, 1.05);
    height: 180px;
    z-index: 1;
}

.aHead {
    position: fixed;
    top: 15%;
    left: 35%;
    opacity: 0;
}

.aBody {
    position: fixed;
    top: 35%;
    left: 35%;
    opacity: 0;
}

.aName {
    /* font-family:Arial, Helvetica, sans-serif; */
    font-family: 'Times New Roman', Times, serif;
    font-style: italic;
    font-weight: normal;
}

.wHead {
    position: fixed;
    top: -10%;
    left: 35%;
    opacity: 0;
}

.wBody {
    position: fixed;
    top: 10%;
    left: 35%;
    opacity: 0;
}

.contact-container {
    display: flex;
    justify-content: center;
    align-content: center;
    position: static;
    top: 55%;
    z-index: 0;
}

.contact-img {
    max-width: 50px;
    max-height: 50px;
}

.contact {
    margin-left: 10px;
}

.github {
    position: relative;
    /* left: -20.5%; */
    left: -5%;
    opacity: 0;
}

.linkedin {
    position: relative;
    /* left: -20.5%; */
    left: -5%;
    opacity: 0;
}

.email {
    position: relative;
    /* left: -20.5%; */
    left: -5%;
    opacity: 0;
}

/* Ripple effect */
.ripple {
    background-position: center;
    transition: background 0.8s;
  }
.ripple:hover {
    background: gray radial-gradient(circle, transparent 1%, gray 1%) center/15000%;
}
.ripple:active {
    background-color: lightblue;
    background-size: 100%;
    transition: background 0s;
}

/* Button style */
button {
    position: absolute;
    /* top: 52%;
    left: 29.84%; */
    top: 2%;
    left: 1%;
    border: none;
    border-radius: 50%;
    padding: 10px 10px;
    font-size: 3px;
    text-transform: uppercase;
    cursor: pointer;
    color: black;
    background-color: white;
    box-shadow: 0 0 4px #999;
    outline: none;
    visibility: hidden;
    opacity: 0;
}

